--- a/all_combined/firstpage/first.html
+++ b/all_combined/firstpage/first.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="text-center mt-10">
                     <button><a 
-                        href="/second/2nd.html"
+                        href="../second/2nd.html"
                         class="bg-purple-400 py-4 px-6  rounded-2xl"
                         >
                         Click Here</a>
