--- a/all_combined/second/2nd.html
+++ b/all_combined/second/2nd.html
@@ -78,7 +78,7 @@
                           </p>
                         <button class="bg-gray-600 opacity-90 py-2 w-[120px] rounded-xl duration-500 transition group-hover:bg-opacity-50  hover:translate-x-1">
                             <a 
-                            href="#"
+                            href="../index.html"
                             class=" text-white ">
                                 Click Here</a>
                         </button>
@@ -102,7 +102,7 @@
                       </p>
                     <button class="bg-[#C41C40] opacity-90 py-2 w-[120px] rounded-xl duration-500 transition group-hover:bg-opacity-50  hover:translate-x-1">
                         <a 
-                        href="#"
+                        href="../index.html"
                         class=" text-white">
                             Click Here</a>
                     </button>
@@ -126,7 +126,7 @@
                   </p>
                 <button class="bg-[#F0DF38] opacity-90 py-2 w-[120px] rounded-xl duration-500 transition group-hover:bg-opacity-50  hover:translate-x-1">
                     <a 
-                    href="#"
+                    href="../index.html"
                     class=" text-white">
                         Click Here</a>
                 </button>
